test/integration/semantic/operations4.pal
{14,15,16}
{
    Test that operations work
}
program test(input, output);
var
	i : integer;
	b : boolean;
	r : real;
begin
	// -
	
	i := i - i;
	i := r - i;	// error
	i := i - r;	// error
	i := r - r;	// error
	
	r := r - r;
	r := r - i;
	r := i - r;
	r := i - i;
	
end.
